--- a/rooms.css
+++ b/rooms.css
@@ -1,34 +1,43 @@
 .container{
-    border: 2px solid cyan;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    gap: 20px; 
+    grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+    gap:.5em; 
     padding: 20px;
+    max-width:90%;
+    margin:auto;
 }
-
 .room{
     border: 2px solid red;
     width: 350px;
     border-radius: 5px;
-
+    position:relative;
 }
-
-img{
-    border: 2px solid green;
+.room > img{
     border-radius: 5px;
-    height: 300px;
+    height: 250px;
     width: 350px;
 }
-
+.icon{
+    color:gold;
+}
 .icons{
     display: flex;
+    position: absolute;
+    right:0;
 }
-
 .text{
-    padding: 10px;
+    padding: 2.5em .5em;
+    p{
+        margin-top: .5em;
+    }
 }
-
 .book{
     border-radius: 5px;
     background-color: cyan;
+    padding:.5em;
+    position: absolute;
+    right:0;
+    &:hover{
+        cursor:pointer;
+    }
 }
