--- a/style.css
+++ b/style.css
@@ -3,33 +3,56 @@
   box-sizing: 0;
   margin:0;
   padding:0;
-  font-size:16px;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size:18px;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
 }
 
 li{
   list-style-type: none;
+}
+a{
+  text-decoration: none;
+  color:inherit;
 }
 h2{
   font-size:1.5em;
 }
 
 body{
-  max-width: 80%;
   margin:auto;
 }
 
+nav {
+  position: fixed;
+  left:0;
+  width:100%;
+  z-index: 999;
+  background: white;
+  display: flex;
+  justify-content: space-around;
+  padding:.5em
+}
+.nav-links>li{
+  margin-left:1em;
+  &:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    transition: transform 0.4s ease-in-out;
+  }
+}
+.nav-spacer{
+  height:50px;
+}
 ul{
   display: flex;
   justify-content: space-between;
-  padding:2em;
-  &:hover{
-    cursor: pointer;
-  }
+  align-items: center;
+  padding:.8em;
+ 
 }
 
 .hero{
-  height:90vh;
+  height:95vh;
   background-image: url('./assets/sara-dubler-Koei_7yYtIo-unsplash.jpg');
   background-repeat: no-repeat;
   background-size: cover;
@@ -50,25 +73,24 @@ ul{
   align-items: center;
 }
 
-.explore {
+.explore{
   margin-top: 1em;
   border-radius: 5em;
-  padding:.5em;
+  padding:1em;
   background: none;
   border:2px solid white;
-  color:white;
-  font-weight:bolder;
-  font-size: 2em;
-  width:10em;
   &:hover{
     background-color:whitesmoke;
     cursor: pointer;
     color:black;
+    a{
+      color: black;
+    }
   }
   a{
-    text-decoration: none;
-    font-size: 20px;
-    color: black;
+    color:white;
+    font-weight:bolder;
+    font-size: 2em;
   }
 }
 
@@ -87,11 +109,14 @@ ul{
   background-color:aquamarine;
   &:hover{
     cursor: pointer;
+    transform: scale(1.05);
+    transition: transform 0.5s ease-in-out;
   }
 }
 
 section{
-  margin-bottom:5em;
+  max-width: 90%;
+  margin:5em auto;
 }
 .services{
   height:50vh;
